Adding some styling

--- a/style.css
+++ b/style.css
@@ -1,10 +1,54 @@
 html {
-    box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    min-height: 100vh;
-    font-family: Helvetica, sans-serif;
-    font-weight: 500;
+  margin: 0;
+  min-height: 100vh;
+  font-family: Helvetica, sans-serif;
+  font-weight: 500;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  border-radius: 30px;
+  padding: 3rem;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(217, 153, 98, 0.5)), to(rgba(166, 47, 3, 0.5))), url("noise.svg");
+  background: linear-gradient(rgba(217, 153, 98, 0.5), rgba(166, 47, 3, 0.5)), url("noise.svg");
+  -webkit-box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+          box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+.container h1 {
+  color: #A62F03;
+  font-size: 38px;
+  text-shadow: #e0e0e0 1px 1px 0;
+  padding-bottom: 2rem;
+}
+
+.container h3 {
+  color: #fff;
+  font-size: 22px;
+  text-shadow: #A62F03 1px 1px 0;
+}
+/*# sourceMappingURL=style.css.map */
