--- a/style.css
+++ b/style.css
@@ -43,12 +43,53 @@ body {
   color: #A62F03;
   font-size: 38px;
   text-shadow: #e0e0e0 1px 1px 0;
-  padding-bottom: 2rem;
 }
 
 .container h3 {
   color: #fff;
   font-size: 22px;
   text-shadow: #A62F03 1px 1px 0;
+}
+
+.container form .form-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: left;
+  margin-bottom: 0.5rem;
+  color: #20402E;
+}
+
+.container form .form-group label {
+  margin: 0.5rem 0 0.2rem 0;
+}
+
+.container form .form-group input {
+  height: 30px;
+  -webkit-box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.33);
+          box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.33);
+  border: 1px solid #A62F03;
+  border-radius: 5px;
+  padding-left: 0.5rem;
+}
+
+.container form button {
+  margin-top: 2rem;
+  width: 100%;
+  padding: 1rem 2rem;
+  background-color: #A62F03;
+  border: #A62F03 solid 2px;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 18px;
+}
+
+.container form button:hover {
+  -webkit-box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.33);
+          box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.33);
 }
 /*# sourceMappingURL=style.css.map */
