--- a/style.scss
+++ b/style.scss
@@ -36,11 +36,42 @@ body {
         color: $brown;
         font-size: 38px;
         text-shadow: #e0e0e0 1px 1px 0;
-        padding-bottom: 2rem;
     }
     h3 {
         color: $white;
         font-size: 22px;
         text-shadow: $brown 1px 1px 0;
+    }
+    form {
+        .form-group {
+            display: flex;
+            flex-direction: column;
+            text-align: left;
+            margin-bottom: 0.5rem;
+            color: $darkgreen;
+            label{
+                margin: 0.5rem 0 0.2rem 0;
+            }
+            input {
+                height: 30px;
+                box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.33);
+                border: 1px solid $brown;
+                border-radius: 5px;
+                padding-left: 0.5rem;
+            }
+        }
+        button {
+            margin-top: 2rem;
+            width: 100%;
+            padding: 1rem 2rem;
+            background-color: $brown;
+            border: $brown solid 2px;
+            border-radius: 10px;
+            color: $white;
+            font-size: 18px;
+            &:hover {
+                box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.33);
+            }
+        }
     }
 }
