--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   min-height: 100vh;
   font-family: Helvetica, sans-serif;
   font-weight: 500;
+  letter-spacing: 3px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -17,6 +18,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: #f1e8e8;
 }
 
 .container {
@@ -46,9 +48,7 @@ body {
 }
 
 .container h3 {
-  color: #fff;
   font-size: 22px;
-  text-shadow: #A62F03 1px 1px 0;
 }
 
 .container form .form-group {
@@ -62,6 +62,7 @@ body {
   text-align: left;
   margin-bottom: 0.5rem;
   color: #20402E;
+  font-weight: 600;
 }
 
 .container form .form-group label {
@@ -70,11 +71,24 @@ body {
 
 .container form .form-group input {
   height: 30px;
-  -webkit-box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.33);
-          box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.33);
-  border: 1px solid #A62F03;
+  -webkit-box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.33);
+          box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.33);
+  border: 1px solid #20402E;
   border-radius: 5px;
   padding-left: 0.5rem;
+  outline: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.container form .form-group input:valid {
+  border: 1px solid #048C73;
+}
+
+.container form .form-group input:invalid {
+  border: 1.5px solid #A62F03;
 }
 
 .container form button {
@@ -86,10 +100,23 @@ body {
   border-radius: 10px;
   color: #fff;
   font-size: 18px;
+  font-weight: 600;
+  letter-spacing: 3px;
+  cursor: pointer;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 2px, rgba(0, 0, 0, 0.3) 0px 2px 5px -3px;
+          box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 2px, rgba(0, 0, 0, 0.3) 0px 2px 5px -3px;
 }
 
 .container form button:hover {
   -webkit-box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.33);
           box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.33);
+}
+
+.container .message-container {
+  padding: 0 1rem;
+  border: #20402E solid 1px;
+  border-radius: 10px;
+  color: #20402E;
+  text-shadow: #fff 1px 1px 0;
 }
 /*# sourceMappingURL=style.css.map */
