--- a/style.scss
+++ b/style.scss
@@ -14,9 +14,11 @@ body {
     min-height: 100vh;
     font-family: Helvetica, sans-serif;
     font-weight: 500;
+    letter-spacing: 3px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgb(241, 232, 232);
 }
 
 .container {
@@ -38,9 +40,7 @@ body {
         text-shadow: #e0e0e0 1px 1px 0;
     }
     h3 {
-        color: $white;
         font-size: 22px;
-        text-shadow: $brown 1px 1px 0;
     }
     form {
         .form-group {
@@ -49,15 +49,25 @@ body {
             text-align: left;
             margin-bottom: 0.5rem;
             color: $darkgreen;
+            font-weight: 600;
             label{
                 margin: 0.5rem 0 0.2rem 0;
             }
             input {
                 height: 30px;
-                box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.33);
-                border: 1px solid $brown;
+                box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.33);
+                border: 1px solid $darkgreen;
                 border-radius: 5px;
                 padding-left: 0.5rem;
+                outline: none;
+                box-sizing: border-box;
+                transition: all 0.3s;
+                &:valid {
+                    border: 1px solid $green;
+                }
+                &:invalid {
+                    border: 1.5px solid $brown;
+                }
             }
         }
         button {
@@ -69,9 +79,20 @@ body {
             border-radius: 10px;
             color: $white;
             font-size: 18px;
+            font-weight: 600;
+            letter-spacing: 3px;
+            cursor: pointer;
+            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 2px, rgba(0, 0, 0, 0.3) 0px 2px 5px -3px;
             &:hover {
                 box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.33);
             }
         }
+    }
+    .message-container {
+        padding: 0 1rem;
+        border: $darkgreen solid 1px;
+        border-radius: 10px;
+        color: $darkgreen;
+        text-shadow: $white 1px 1px 0;
     }
 }
