--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
+  min-width: 400px;
   border-radius: 30px;
   padding: 3rem;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(217, 153, 98, 0.5)), to(rgba(166, 47, 3, 0.5))), url("noise.svg");
