--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,7 @@ body {
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    // border: solid 3px $brown;
+    min-width: 400px;
     border-radius: 30px;
     padding: 3rem;
     background: linear-gradient(rgba(217,153,98,.5), rgba(166,47,3,.5)),
