Adding final changes for GitHub pages

--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ body {
   min-width: 400px;
   border-radius: 30px;
   padding: 3rem;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(217, 153, 98, 0.5)), to(rgba(166, 47, 3, 0.5))), url("noise.svg");
-  background: linear-gradient(rgba(217, 153, 98, 0.5), rgba(166, 47, 3, 0.5)), url("noise.svg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(217, 153, 98, 0.5)), to(rgba(166, 47, 3, 0.5))), url("https://meilune.github.io/form-validation/noise.svg");
+  background: linear-gradient(rgba(217, 153, 98, 0.5), rgba(166, 47, 3, 0.5)), url("https://meilune.github.io/form-validation/noise.svg");
   -webkit-box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
           box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
